tdf#123470 textforwarder has stale view of SdrTextObj

When we save the document we get a SwXShape for the SdrObject and call
getShapeText on it, which creates a TextForwarder for it. The SwXShape
is temporary and is discarded afterwards. If we modify the text and
save again we get a new SwXShape and a new TextForwarder.

If a11y is active, then when the textbox is inserted a11y gets a SwXShape
for the object and the SwXShape stays alive while the a11y view of the
Sdrobject stays around.

The SdrObject will keep a weak ref to the current SwXShape for it, so
on save we get the already existing SwXShape instead of a new one. On the
first save this is ok, as the TextForwarder is created on demand.

On the second save, the problem is that the SvxTextEditSourceImpl of the
TextForwarded was initially created without a SdrView so its in sort of a
"snapshot" mode, so first time the text is queried, that sticks as the result.

So a cached text forwarder cannot be trusted when its for a SdrTextObj
that's being edited and HasView is false

Change-Id: Ib3d500752f1876086ef1996885a2b86b581f5bc4